Order generation and response Completed

--- a/templates/unsuccess.html
+++ b/templates/unsuccess.html
@@ -19,7 +19,7 @@
 				<h1>Order Failed</h1>
 				<p>Developers test for Payment Gateway completed</p>
 			</header>
-      <p>Developers Test always result in transaction failure as it is using dummy values</p>
+      <p>Oops Order Failed</p>
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
